--- a/src/pages/Plan/Detail/PlanBudget/PlanBudget.module.css
+++ b/src/pages/Plan/Detail/PlanBudget/PlanBudget.module.css
@@ -7,17 +7,23 @@
 .title {
   font-weight: var(--font-weight-bold);
   font-size: var(--text-xl);
+
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 .invoice_container {
   display: flex;
-  gap: 2rem;
+  gap: 0.5rem;
   flex-wrap: wrap;
 }
 
 .invoice {
   flex: 1;
   min-height: 20rem;
+  max-height: 40rem;
+  overflow-y: auto;
 
   box-sizing: border-box;
   padding: 1.5rem;
@@ -26,7 +32,8 @@
   flex-direction: column;
   gap: 5rem;
 
-  box-shadow: var(--shadow-md);
+  border: 1px solid var(--color-gray-200);
+  border-radius: var(--radius-lg);
 }
 
 .info {
@@ -50,6 +57,10 @@
   justify-content: space-between;
   padding: 0.5rem 0;
   border-bottom: 1px solid var(--color-gray-200);
+}
+
+.item_title {
+  font-weight: var(--font-weight-bold);
 }
 
 .invoice_detail {
