--- a/src/pages/Plan/Detail/PlanDes/DayDetail.module.css
+++ b/src/pages/Plan/Detail/PlanDes/DayDetail.module.css
@@ -1,16 +1,16 @@
 .container {
-  height: 40rem;
+  min-height: 15rem;
+  max-height: 40rem;
+
   overflow-y: auto;
   border-radius: var(--radius-lg);
   box-shadow: var(--shadow-sm);
   box-sizing: border-box;
-  padding: 4rem 1rem 0 1rem;
-}
+  padding: 1rem 1rem 0 1rem;
 
-.inner_wrapper {
+  --border-color: var(--color-indigo-400);
+
   display: flex;
-  align-items: stretch;
-  min-height: 100%;
 }
 
 .container_right {
@@ -20,7 +20,7 @@
 
   display: flex;
   flex-direction: column;
-  gap: 6rem;
+  gap: 3rem;
 }
 
 .divider {
@@ -34,7 +34,7 @@
 .vertical_divider {
   flex: 1;
   width: 4px;
-  background-color: var(--color-indigo-400);
+  background-color: var(--border-color);
 }
 
 .content_wrapper {
@@ -44,12 +44,12 @@
 
 .dashed {
   width: 3rem;
-  border-bottom: 1px dashed var(--color-indigo-400);
+  border-bottom: 1px dashed var(--border-color);
 }
 
 .content_item {
   flex: 1;
-  border: 1px solid var(--color-indigo-400);
+  border: 1px solid var(--border-color);
   height: 3rem;
 
   box-sizing: border-box;
@@ -89,4 +89,18 @@
   display: flex;
   align-items: center;
   gap: 1rem;
+}
+
+.empty {
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+
+  font-size: var(--text-lg);
+  font-weight: var(--font-weight-bold);
 }
