--- a/src/pages/Plan/Detail/PlanDes/PlanDes.module.css
+++ b/src/pages/Plan/Detail/PlanDes/PlanDes.module.css
@@ -17,7 +17,11 @@
 
 .title {
   font-weight: var(--font-weight-bold);
-  font-size: var(--text-2xl);
+  font-size: var(--text-xl);
+
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 .des_container {
