--- a/src/pages/Plan/Detail/PlanDes/Reserved.module.css
+++ b/src/pages/Plan/Detail/PlanDes/Reserved.module.css
@@ -1,12 +1,13 @@
 .container {
-  height: 40rem;
+  min-height: 15rem;
+  max-height: 25rem;
+  overflow-y: auto;
+
   border-radius: var(--radius-lg);
-  box-shadow: var(--shadow-sm);
 
   box-sizing: border-box;
-  padding: 1rem;
   display: flex;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 .des_item {
@@ -14,11 +15,13 @@
 
   box-sizing: border-box;
   padding: 1rem;
-  box-shadow: var(--shadow-md);
 
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
+
+  border: 1px solid var(--color-gray-200);
+  border-radius: var(--radius-lg);
 
   overflow-y: auto;
 }
@@ -26,6 +29,10 @@
 .des_title {
   font-weight: var(--font-weight-bold);
   font-size: var(--text-lg);
+
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
 }
 
 .rservation_container {
