--- a/src/pages/Plan/Detail/PlanDes/Reserved.module.css
+++ b/src/pages/Plan/Detail/PlanDes/Reserved.module.css
@@ -1,29 +1,28 @@
 .container {
-  min-height: 15rem;
+  min-height: 12.125rem;
   max-height: 25rem;
-  overflow-y: auto;
 
   border-radius: var(--radius-lg);
 
   box-sizing: border-box;
   display: flex;
   gap: 0.5rem;
+
+  --color-hover-bg: var(--color-zinc-100);
+  --color-border: var(--color-zinc-300);
 }
 
 .des_item {
   flex: 1;
 
   box-sizing: border-box;
-  padding: 1rem;
 
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 1px;
 
-  border: 1px solid var(--color-gray-200);
+  border: 1px solid var(--color-border);
   border-radius: var(--radius-lg);
-
-  overflow-y: auto;
 }
 
 .des_title {
@@ -33,30 +32,82 @@
   display: flex;
   gap: 0.5rem;
   align-items: center;
+
+  padding: 1rem;
+
+  box-shadow: var(--shadow-sm);
 }
 
-.rservation_container {
+.scroll_wrapper {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+}
+
+.reservation_container {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  cursor: pointer;
+  padding-right: 0.5rem;
+
+  transition: background-color 0.2s;
+}
+
+.reservation_container:hover {
+  background-color: var(--color-hover-bg);
+}
+
+.flex_row {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.reservation_index {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 2rem;
+
+  font-size: var(--text-sm);
+  font-weight: var(--font-weight-bold);
+  background-color: var(--color-border);
 }
 
 .reservation_info {
+  box-sizing: border-box;
+  padding: 1rem 0;
+
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
 }
 
-.icon_wrapper {
+.dropdown_content {
+  z-index: 99;
+
+  border: 1px solid var(--color-gray-100);
+  background-color: var(--color-white);
+  color: var(--color-black);
+  border-radius: var(--radius-sm);
+
   display: flex;
-  align-items: center;
+  flex-direction: column;
 }
 
-.icon_box {
+.dropdown_content_item {
+  padding: 1rem;
+
+  white-space: nowrap;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 1.8rem;
-  height: 1.8rem;
+
   cursor: pointer;
+}
+
+.dropdown_content_item:hover {
+  background-color: var(--color-gray-100);
 }
