--- a/src/components/Loading/Loading.module.css
+++ b/src/components/Loading/Loading.module.css
@@ -1,12 +1,12 @@
 .container {
   position: fixed;
   inset: 0;
-
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 99;
-  background-color: rgba(0, 0, 0, 0.1);
+
+  background-color: transparent;
 }
 
 .section_container {
@@ -15,19 +15,17 @@
   justify-content: center;
   align-items: center;
   z-index: 99;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: transparent;
 }
 
 .spinner {
-  font-size: 10px;
-  width: 1em;
-  height: 1em;
+  width: 1rem;
+  height: 1rem;
   border-radius: 50%;
   position: relative;
   text-indent: -9999em;
   animation: mulShdSpin 1.1s infinite ease;
   transform: translateZ(0);
-
   z-index: 100;
 }
 
@@ -35,75 +33,82 @@
   0%,
   100% {
     box-shadow: 0em -2.6em 0em 0em #ffffff,
-      1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2),
-      2.5em 0em 0 0em rgba(255, 255, 255, 0.2),
-      1.75em 1.75em 0 0em rgba(255, 255, 255, 0.2),
-      0em 2.5em 0 0em rgba(255, 255, 255, 0.2),
-      -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.2),
+      1.8em -1.8em 0 0em rgba(255, 255, 255, 0.4),
+      2.5em 0em 0 0em rgba(255, 255, 255, 0.3),
+      1.75em 1.75em 0 0em rgba(255, 255, 255, 0.25),
+      0em 2.5em 0 0em rgba(255, 255, 255, 0.25),
+      -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.3),
       -2.6em 0em 0 0em rgba(255, 255, 255, 0.5),
       -1.8em -1.8em 0 0em rgba(255, 255, 255, 0.7);
   }
+
   12.5% {
     box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.7),
-      1.8em -1.8em 0 0em #ffffff, 2.5em 0em 0 0em rgba(255, 255, 255, 0.2),
-      1.75em 1.75em 0 0em rgba(255, 255, 255, 0.2),
-      0em 2.5em 0 0em rgba(255, 255, 255, 0.2),
-      -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.2),
-      -2.6em 0em 0 0em rgba(255, 255, 255, 0.2),
+      1.8em -1.8em 0 0em #ffffff, 2.5em 0em 0 0em rgba(255, 255, 255, 0.4),
+      1.75em 1.75em 0 0em rgba(255, 255, 255, 0.3),
+      0em 2.5em 0 0em rgba(255, 255, 255, 0.3),
+      -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.25),
+      -2.6em 0em 0 0em rgba(255, 255, 255, 0.25),
       -1.8em -1.8em 0 0em rgba(255, 255, 255, 0.5);
   }
+
   25% {
     box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.5),
       1.8em -1.8em 0 0em rgba(255, 255, 255, 0.7), 2.5em 0em 0 0em #ffffff,
-      1.75em 1.75em 0 0em rgba(255, 255, 255, 0.2),
-      0em 2.5em 0 0em rgba(255, 255, 255, 0.2),
-      -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.2),
+      1.75em 1.75em 0 0em rgba(255, 255, 255, 0.4),
+      0em 2.5em 0 0em rgba(255, 255, 255, 0.3),
+      -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.25),
       -2.6em 0em 0 0em rgba(255, 255, 255, 0.2),
       -1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2);
   }
+
   37.5% {
-    box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.2),
+    box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.25),
       1.8em -1.8em 0 0em rgba(255, 255, 255, 0.5),
       2.5em 0em 0 0em rgba(255, 255, 255, 0.7), 1.75em 1.75em 0 0em #ffffff,
-      0em 2.5em 0 0em rgba(255, 255, 255, 0.2),
-      -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.2),
-      -2.6em 0em 0 0em rgba(255, 255, 255, 0.2),
+      0em 2.5em 0 0em rgba(255, 255, 255, 0.4),
+      -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.3),
+      -2.6em 0em 0 0em rgba(255, 255, 255, 0.25),
       -1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2);
   }
+
   50% {
     box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.2),
-      1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2),
+      1.8em -1.8em 0 0em rgba(255, 255, 255, 0.25),
       2.5em 0em 0 0em rgba(255, 255, 255, 0.5),
       1.75em 1.75em 0 0em rgba(255, 255, 255, 0.7), 0em 2.5em 0 0em #ffffff,
-      -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.2),
-      -2.6em 0em 0 0em rgba(255, 255, 255, 0.2),
+      -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.3),
+      -2.6em 0em 0 0em rgba(255, 255, 255, 0.25),
       -1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2);
   }
+
   62.5% {
     box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.2),
-      1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2),
-      2.5em 0em 0 0em rgba(255, 255, 255, 0.2),
+      1.8em -1.8em 0 0em rgba(255, 255, 255, 0.25),
+      2.5em 0em 0 0em rgba(255, 255, 255, 0.3),
       1.75em 1.75em 0 0em rgba(255, 255, 255, 0.5),
       0em 2.5em 0 0em rgba(255, 255, 255, 0.7), -1.8em 1.8em 0 0em #ffffff,
-      -2.6em 0em 0 0em rgba(255, 255, 255, 0.2),
-      -1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2);
+      -2.6em 0em 0 0em rgba(255, 255, 255, 0.3),
+      -1.8em -1.8em 0 0em rgba(255, 255, 255, 0.25);
   }
+
   75% {
-    box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.2),
-      1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2),
-      2.5em 0em 0 0em rgba(255, 255, 255, 0.2),
-      1.75em 1.75em 0 0em rgba(255, 255, 255, 0.2),
+    box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.25),
+      1.8em -1.8em 0 0em rgba(255, 255, 255, 0.3),
+      2.5em 0em 0 0em rgba(255, 255, 255, 0.35),
+      1.75em 1.75em 0 0em rgba(255, 255, 255, 0.4),
       0em 2.5em 0 0em rgba(255, 255, 255, 0.5),
       -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.7), -2.6em 0em 0 0em #ffffff,
-      -1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2);
+      -1.8em -1.8em 0 0em rgba(255, 255, 255, 0.3);
   }
+
   87.5% {
-    box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.2),
-      1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2),
-      2.5em 0em 0 0em rgba(255, 255, 255, 0.2),
-      1.75em 1.75em 0 0em rgba(255, 255, 255, 0.2),
-      0em 2.5em 0 0em rgba(255, 255, 255, 0.2),
-      -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.5),
+    box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.3),
+      1.8em -1.8em 0 0em rgba(255, 255, 255, 0.35),
+      2.5em 0em 0 0em rgba(255, 255, 255, 0.4),
+      1.75em 1.75em 0 0em rgba(255, 255, 255, 0.45),
+      0em 2.5em 0 0em rgba(255, 255, 255, 0.5),
+      -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.6),
       -2.6em 0em 0 0em rgba(255, 255, 255, 0.7), -1.8em -1.8em 0 0em #ffffff;
   }
 }
