--- a/src/components/Loading/Loading.module.css
+++ b/src/components/Loading/Loading.module.css
@@ -32,83 +32,83 @@
 @keyframes mulShdSpin {
   0%,
   100% {
-    box-shadow: 0em -2.6em 0em 0em #ffffff,
-      1.8em -1.8em 0 0em rgba(255, 255, 255, 0.4),
-      2.5em 0em 0 0em rgba(255, 255, 255, 0.3),
-      1.75em 1.75em 0 0em rgba(255, 255, 255, 0.25),
-      0em 2.5em 0 0em rgba(255, 255, 255, 0.25),
-      -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.3),
-      -2.6em 0em 0 0em rgba(255, 255, 255, 0.5),
-      -1.8em -1.8em 0 0em rgba(255, 255, 255, 0.7);
+    box-shadow: 0em -2.6em 0em 0em #666666,
+      1.8em -1.8em 0 0em rgba(102, 102, 102, 0.4),
+      2.5em 0em 0 0em rgba(102, 102, 102, 0.3),
+      1.75em 1.75em 0 0em rgba(102, 102, 102, 0.25),
+      0em 2.5em 0 0em rgba(102, 102, 102, 0.25),
+      -1.8em 1.8em 0 0em rgba(102, 102, 102, 0.3),
+      -2.6em 0em 0 0em rgba(102, 102, 102, 0.5),
+      -1.8em -1.8em 0 0em rgba(102, 102, 102, 0.7);
   }
 
   12.5% {
-    box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.7),
-      1.8em -1.8em 0 0em #ffffff, 2.5em 0em 0 0em rgba(255, 255, 255, 0.4),
-      1.75em 1.75em 0 0em rgba(255, 255, 255, 0.3),
-      0em 2.5em 0 0em rgba(255, 255, 255, 0.3),
-      -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.25),
-      -2.6em 0em 0 0em rgba(255, 255, 255, 0.25),
-      -1.8em -1.8em 0 0em rgba(255, 255, 255, 0.5);
+    box-shadow: 0em -2.6em 0em 0em rgba(102, 102, 102, 0.7),
+      1.8em -1.8em 0 0em #666666, 2.5em 0em 0 0em rgba(102, 102, 102, 0.4),
+      1.75em 1.75em 0 0em rgba(102, 102, 102, 0.3),
+      0em 2.5em 0 0em rgba(102, 102, 102, 0.3),
+      -1.8em 1.8em 0 0em rgba(102, 102, 102, 0.25),
+      -2.6em 0em 0 0em rgba(102, 102, 102, 0.25),
+      -1.8em -1.8em 0 0em rgba(102, 102, 102, 0.5);
   }
 
   25% {
-    box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.5),
-      1.8em -1.8em 0 0em rgba(255, 255, 255, 0.7), 2.5em 0em 0 0em #ffffff,
-      1.75em 1.75em 0 0em rgba(255, 255, 255, 0.4),
-      0em 2.5em 0 0em rgba(255, 255, 255, 0.3),
-      -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.25),
-      -2.6em 0em 0 0em rgba(255, 255, 255, 0.2),
-      -1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2);
+    box-shadow: 0em -2.6em 0em 0em rgba(102, 102, 102, 0.5),
+      1.8em -1.8em 0 0em rgba(102, 102, 102, 0.7), 2.5em 0em 0 0em #666666,
+      1.75em 1.75em 0 0em rgba(102, 102, 102, 0.4),
+      0em 2.5em 0 0em rgba(102, 102, 102, 0.3),
+      -1.8em 1.8em 0 0em rgba(102, 102, 102, 0.25),
+      -2.6em 0em 0 0em rgba(102, 102, 102, 0.2),
+      -1.8em -1.8em 0 0em rgba(102, 102, 102, 0.2);
   }
 
   37.5% {
-    box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.25),
-      1.8em -1.8em 0 0em rgba(255, 255, 255, 0.5),
-      2.5em 0em 0 0em rgba(255, 255, 255, 0.7), 1.75em 1.75em 0 0em #ffffff,
-      0em 2.5em 0 0em rgba(255, 255, 255, 0.4),
-      -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.3),
-      -2.6em 0em 0 0em rgba(255, 255, 255, 0.25),
-      -1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2);
+    box-shadow: 0em -2.6em 0em 0em rgba(102, 102, 102, 0.25),
+      1.8em -1.8em 0 0em rgba(102, 102, 102, 0.5),
+      2.5em 0em 0 0em rgba(102, 102, 102, 0.7), 1.75em 1.75em 0 0em #666666,
+      0em 2.5em 0 0em rgba(102, 102, 102, 0.4),
+      -1.8em 1.8em 0 0em rgba(102, 102, 102, 0.3),
+      -2.6em 0em 0 0em rgba(102, 102, 102, 0.25),
+      -1.8em -1.8em 0 0em rgba(102, 102, 102, 0.2);
   }
 
   50% {
-    box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.2),
-      1.8em -1.8em 0 0em rgba(255, 255, 255, 0.25),
-      2.5em 0em 0 0em rgba(255, 255, 255, 0.5),
-      1.75em 1.75em 0 0em rgba(255, 255, 255, 0.7), 0em 2.5em 0 0em #ffffff,
-      -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.3),
-      -2.6em 0em 0 0em rgba(255, 255, 255, 0.25),
-      -1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2);
+    box-shadow: 0em -2.6em 0em 0em rgba(102, 102, 102, 0.2),
+      1.8em -1.8em 0 0em rgba(102, 102, 102, 0.25),
+      2.5em 0em 0 0em rgba(102, 102, 102, 0.5),
+      1.75em 1.75em 0 0em rgba(102, 102, 102, 0.7), 0em 2.5em 0 0em #666666,
+      -1.8em 1.8em 0 0em rgba(102, 102, 102, 0.3),
+      -2.6em 0em 0 0em rgba(102, 102, 102, 0.25),
+      -1.8em -1.8em 0 0em rgba(102, 102, 102, 0.2);
   }
 
   62.5% {
-    box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.2),
-      1.8em -1.8em 0 0em rgba(255, 255, 255, 0.25),
-      2.5em 0em 0 0em rgba(255, 255, 255, 0.3),
-      1.75em 1.75em 0 0em rgba(255, 255, 255, 0.5),
-      0em 2.5em 0 0em rgba(255, 255, 255, 0.7), -1.8em 1.8em 0 0em #ffffff,
-      -2.6em 0em 0 0em rgba(255, 255, 255, 0.3),
-      -1.8em -1.8em 0 0em rgba(255, 255, 255, 0.25);
+    box-shadow: 0em -2.6em 0em 0em rgba(102, 102, 102, 0.2),
+      1.8em -1.8em 0 0em rgba(102, 102, 102, 0.25),
+      2.5em 0em 0 0em rgba(102, 102, 102, 0.3),
+      1.75em 1.75em 0 0em rgba(102, 102, 102, 0.5),
+      0em 2.5em 0 0em rgba(102, 102, 102, 0.7), -1.8em 1.8em 0 0em #666666,
+      -2.6em 0em 0 0em rgba(102, 102, 102, 0.3),
+      -1.8em -1.8em 0 0em rgba(102, 102, 102, 0.25);
   }
 
   75% {
-    box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.25),
-      1.8em -1.8em 0 0em rgba(255, 255, 255, 0.3),
-      2.5em 0em 0 0em rgba(255, 255, 255, 0.35),
-      1.75em 1.75em 0 0em rgba(255, 255, 255, 0.4),
-      0em 2.5em 0 0em rgba(255, 255, 255, 0.5),
-      -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.7), -2.6em 0em 0 0em #ffffff,
-      -1.8em -1.8em 0 0em rgba(255, 255, 255, 0.3);
+    box-shadow: 0em -2.6em 0em 0em rgba(102, 102, 102, 0.25),
+      1.8em -1.8em 0 0em rgba(102, 102, 102, 0.3),
+      2.5em 0em 0 0em rgba(102, 102, 102, 0.35),
+      1.75em 1.75em 0 0em rgba(102, 102, 102, 0.4),
+      0em 2.5em 0 0em rgba(102, 102, 102, 0.5),
+      -1.8em 1.8em 0 0em rgba(102, 102, 102, 0.7), -2.6em 0em 0 0em #666666,
+      -1.8em -1.8em 0 0em rgba(102, 102, 102, 0.3);
   }
 
   87.5% {
-    box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.3),
-      1.8em -1.8em 0 0em rgba(255, 255, 255, 0.35),
-      2.5em 0em 0 0em rgba(255, 255, 255, 0.4),
-      1.75em 1.75em 0 0em rgba(255, 255, 255, 0.45),
-      0em 2.5em 0 0em rgba(255, 255, 255, 0.5),
-      -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.6),
-      -2.6em 0em 0 0em rgba(255, 255, 255, 0.7), -1.8em -1.8em 0 0em #ffffff;
+    box-shadow: 0em -2.6em 0em 0em rgba(102, 102, 102, 0.3),
+      1.8em -1.8em 0 0em rgba(102, 102, 102, 0.35),
+      2.5em 0em 0 0em rgba(102, 102, 102, 0.4),
+      1.75em 1.75em 0 0em rgba(102, 102, 102, 0.45),
+      0em 2.5em 0 0em rgba(102, 102, 102, 0.5),
+      -1.8em 1.8em 0 0em rgba(102, 102, 102, 0.6),
+      -2.6em 0em 0 0em rgba(102, 102, 102, 0.7), -1.8em -1.8em 0 0em #666666;
   }
 }
