--- a/src/pages/Preference/PreferenceLayout.module.css
+++ b/src/pages/Preference/PreferenceLayout.module.css
@@ -1,18 +1,18 @@
 .container {
   box-sizing: border-box;
-  width: 100vw;
+  max-width: 100vw;
   min-height: 100vh;
 
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0.5rem;
 }
 
 .content {
   display: flex;
   flex-direction: column;
 
+  overflow: hidden;
   width: 100%;
   max-width: var(--breakpoint-lg);
   flex: 1;
