--- a/src/pages/Search/Detail/SearhDetail.module.css
+++ b/src/pages/Search/Detail/SearhDetail.module.css
@@ -4,8 +4,16 @@
 
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
-  margin-top: 1rem;
+  gap: 4rem;
+
+  box-sizing: border-box;
+  padding-top: 2rem;
+}
+
+.section {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .sort_btns {
@@ -40,6 +48,7 @@
   display: flex;
   gap: 1rem;
   align-items: center;
+  justify-content: space-between;
 }
 
 .title {
@@ -47,7 +56,6 @@
   top: 4px;
   font-size: var(--text-2xl);
   font-weight: var(--font-weight-bold);
-  margin-bottom: 1rem;
 }
 
 .button_box {
@@ -59,17 +67,16 @@
 .content {
   flex: 1;
   width: 100%;
-  margin-bottom: 1rem;
+
+  box-sizing: border-box;
+  padding-top: 1rem;
 }
 
-.content_header {
+.content_list {
   display: flex;
-  gap: 1rem;
-  align-items: center;
-  font-size: var(--text-md);
-  font-weight: var(--font-weight-semibold);
-  background-color: var(--color-board-bg);
-  padding: 1rem 0;
+  flex-direction: column;
+
+  gap: 1.5rem;
 }
 
 .community_title {
@@ -83,4 +90,8 @@
 .recommend {
   width: 5rem;
   text-align: center;
+}
+
+.empty {
+  min-height: 15rem;
 }
