--- a/src/pages/Plan/Detail/PlanDes/Reserved.module.css
+++ b/src/pages/Plan/Detail/PlanDes/Reserved.module.css
@@ -1,11 +1,9 @@
 .container {
-  min-height: 12.125rem;
-  max-height: 25rem;
-
   border-radius: var(--radius-lg);
 
   box-sizing: border-box;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   gap: 0.5rem;
 
   --color-hover-bg: var(--color-zinc-100);
@@ -22,6 +20,8 @@
 }
 
 .des_item {
+  min-height: 12.125rem;
+  max-height: 25rem;
   flex: 1;
 
   box-sizing: border-box;
@@ -122,4 +122,10 @@
 
 .dropdown_content_item:hover {
   background-color: var(--color-gray-100);
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    grid-template-columns: 1fr;
+  }
 }
