--- a/src/pages/Plan/CreatePlan/ModalContents/AllCities.module.css
+++ b/src/pages/Plan/CreatePlan/ModalContents/AllCities.module.css
@@ -18,7 +18,10 @@
   padding-bottom: 1rem;
   display: flex;
   gap: 0.5rem;
+
+  flex-wrap: wrap;
 }
+
 .country_container {
   display: flex;
   flex-direction: column;
@@ -49,5 +52,11 @@
 @media screen and (max-width: 768px) {
   .grid_container {
     grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .grid_container {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
