--- a/src/pages/Plan/CreatePlan/ModalContents/Destination.module.css
+++ b/src/pages/Plan/CreatePlan/ModalContents/Destination.module.css
@@ -2,8 +2,10 @@
   box-sizing: border-box;
   height: 100%;
   width: 100%;
-  min-width: 60vw;
+
+  min-width: 20rem;
   max-height: 80vh;
+
   overflow-y: auto;
   display: flex;
   flex-direction: column;
