--- a/src/pages/Plan/CreatePlan/ModalContents/PreferenceCities.module.css
+++ b/src/pages/Plan/CreatePlan/ModalContents/PreferenceCities.module.css
@@ -35,3 +35,9 @@
     grid-template-columns: repeat(2, 1fr);
   }
 }
+
+@media screen and (max-width: 576px) {
+  .grid_container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
