--- a/src/components/Image/ImageWithPlaceholder.module.css
+++ b/src/components/Image/ImageWithPlaceholder.module.css
@@ -1,16 +1,24 @@
 .container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
-.placeholder {
-  width: 100%;
-  height: 100%;
-  background-color: var(--color-gray-300);
-
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -1;
+}
+
+.placeholder,
+.image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
+.placeholder {
+  background-color: var(--color-gray-300);
 }
