--- a/src/pages/Auth/AuthLayout.module.css
+++ b/src/pages/Auth/AuthLayout.module.css
@@ -22,19 +22,28 @@
   height: 100%;
   flex: 4;
 
-  background-image: url("/plan_img.jpg");
+  position: relative;
   overflow: hidden;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+  z-index: 99;
+}
 
+.bg_img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+
+  z-index: -1;
+}
+
+.text_wrapper {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
 
+  gap: 1rem;
   padding: 2rem;
-  z-index: 99;
-  overflow: hidden;
 }
 
 .title {
