--- a/src/pages/Admin/Sidebar/Sidebar.module.css
+++ b/src/pages/Admin/Sidebar/Sidebar.module.css
@@ -21,6 +21,7 @@
   justify-content: center;
   align-items: center;
   height: 5rem;
+  cursor: pointer;
 
   box-shadow: 0 4px 6px -1px rgba(255, 255, 255, 0.5),
     0 2px 4px -2px rgba(255, 255, 255, 0.5);
