--- a/src/pages/Plan/CreatePlan/FormCreatePlan.module.css
+++ b/src/pages/Plan/CreatePlan/FormCreatePlan.module.css
@@ -43,8 +43,9 @@
 }
 
 .error {
-  color: var(--color-red-600);
+  color: var(--color-red-500);
   font-size: var(--text-xs);
+  font-weight: var(--font-weight-bold);
 }
 
 .private_box {
